Enum update_status {
  pending
  completed
}

Enum service_request_status {
  accepted
  request_further_details
  rejected
  pending
  completed
  withdrawn
}

Enum service_category_name {
  Cleaning
  Babysitting
  Pest Control
  plumbing
  Electrical Repairs
  Beauty
  Miscellaneous
}

Enum notification_type {
  service_completed
  new_service
}

Table provider {
  id integer [pk, not null]
  email varchar [not null]
  password varchar [not null]
  first_name varchar [not null]
  last_name varchar
  description varchar [not null]
  address varchar [not null]
  is_approved boolean [not null, default: false]
  is_available boolean [not null, default: false]
  profile_image varchar
}

Table customer {
  id integer [pk, not null]
  email varchar [not null]
  password varchar 
  first_name varchar [not null]
  last_name varchar
  google_sub varchar
  profile_image varchar
  email_verified boolean [default: false]
  email_token varchar
}

Table service {
  id integer [pk, not null]
  title varchar [not null]
  description varchar [not null]
  provider_id integer [ref: > provider.id]
  price decimal(6, 2) [note: 'we assume currency is GBP']
  areas_covered varchar [note: 'city']
  availability varchar [note: 'eg. weekdays, 24/7']
  category service_category_title [not null]
  is_available boolean [not null, default: false]
}

Table service_request {
  id integer [pk, not null]
  description varchar [not null]
  provider_id integer [ref: > provider.id]
  customer_id integer [ref: > customer.id]
  service_id integer [ref: > service.id]
  customer_address varchar [not null]
  booking_time datetime [not null]
  status service_request_status [not null]
  created_at timestamp [not null]
}

Table review {
  id integer [pk, not null]
  service_id integer [ref: > service.id]
  customer_id integer [ref: > customer.id]
  rating integer [not null, note: 'from 1 to 5']
  title varchar
  description varchar
  created_at timestamp [not null, default: current_timestamp]
}

Table profile_update {
  id integer [pk, not null]
  provider_id integer [ref: > provider.id]
  reason varchar [not null]
  status update_status [not null]
  created_at timestamp [not null]
}

Table service_request_update {
  id integer [pk, not null]
  service_request_id integer [ref: > service_request.id]
  reason varchar [not null]
  status update_status [not null]
}

Table notification {
  id integer [pk, not null]
  provider_id integer [ref: > provider.id]
  customer_id integer [ref: > customer.id]
  service_id integer [ref: > service.id]
  date timestamp [not null]
  type notification_type [not null]
  read boolean [not null, default: false]
}